<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">salim_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_mot_de_passe_ou">mot de passe oublié</string>
<string name="lbl_email">EMAIL</string>
<string name="lbl_login">LOGIN</string>
<string name="lbl_login2">login</string>
<string name="msg_no_account_sig">no account? sign up  </string>
<string name="lbl_sign_up">sign up </string>
<string name="lbl_password">PASSWORD</string>
<string name="lbl_no_account">no account? </string>
</resources>
