<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeThreeVM" type="com.salimsapplication.app.modules.androidlargethree.data.viewmodel.AndroidLargeThreeVM"/>
    </data>
    <FrameLayout android:id="@+id/frameAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyle">

        <LinearLayout
            android:id="@+id/linearColumnlogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginBottom="@dimen/_29pxv"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginEnd="@dimen/_3pxh"
                android:gravity="center_horizontal"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:id="@+id/linearRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageImageSix"
                        imageRes="@{@drawable/img_image6}"
                        android:layout_width="@dimen/_126pxh"
                        android:layout_height="@dimen/_101pxh"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_image6" />

                    <ImageView
                        android:id="@+id/imageImageFive"
                        imageRes="@{@drawable/img_image5}"
                        android:layout_width="@dimen/_159pxh"
                        android:layout_height="@dimen/_97pxh"
                        android:layout_marginStart="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:scaleType="fitXY"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_image5" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/txtLOGIN"
                style="@style/txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_105pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:ellipsize="end"
                android:letterSpacing="0.31"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtLOGIN}"
                tools:text="@string/lbl_login" />

            <TextView
                android:id="@+id/txtEMAIL"
                style="@style/txtBarlowsemibold15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_marginEnd="@dimen/_32pxh"
                android:ellipsize="end"
                android:letterSpacing="0.11"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtEMAIL}"
                tools:text="@string/lbl_email" />

            <LinearLayout
                android:id="@+id/linearRowvector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageVector"
                    android:layout_width="@dimen/_20pxh"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_marginBottom="@dimen/_28pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_vector" />

                <FrameLayout
                    android:id="@+id/frameStacklineone"
                    android:layout_width="@dimen/_252pxh"
                    android:layout_height="42dp"
                    android:layout_marginStart="@dimen/_12pxh">

                    <View
                        android:id="@+id/lineLineOne"
                        android:layout_width="@dimen/_252pxh"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_gravity="bottom|start"
                        android:layout_marginTop="@dimen/_28pxv"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:background="@color/black_900_87" />

                    <EditText
                        android:id="@+id/etFrame"
                        style="@style/etRounded"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:background="@drawable/rectangle_radius_5"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@={androidLargeThreeVM.androidLargeThreeModel.etFrameValue}"
                        tools:ignore="Autofill" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtPASSWORD"
                style="@style/txtBarlowsemibold15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_32pxh"
                android:ellipsize="end"
                android:letterSpacing="0.11"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtPASSWORD}"
                tools:text="@string/lbl_password" />

            <GridLayout
                android:id="@+id/linearRowlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageLock"
                    android:layout_width="@dimen/_16pxh"
                    android:layout_height="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_marginBottom="@dimen/_30pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_lock"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_lock" />

                <FrameLayout
                    android:id="@+id/frameStacklinetwo"
                    android:layout_width="@dimen/_285pxh"
                    android:layout_height="53dp"
                    android:layout_marginStart="@dimen/_12pxh">

                    <View
                        android:id="@+id/lineLineTwo"
                        android:layout_width="@dimen/_250pxh"
                        android:layout_height="@dimen/_1pxv"
                        android:layout_gravity="bottom|start"
                        android:layout_marginStart="@dimen/_1pxh"
                        android:layout_marginTop="@dimen/_28pxv"
                        android:layout_marginEnd="@dimen/_8pxh"
                        android:layout_marginBottom="@dimen/_18pxv"
                        android:background="@color/black_900_87" />

                    <EditText
                        android:id="@+id/etFrameOne"
                        style="@style/etRounded"
                        android:layout_width="311dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="top|start"
                        android:layout_marginEnd="@dimen/_11pxh"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:background="@drawable/rectangle_radius_5"
                        android:ellipsize="end"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text="@={androidLargeThreeVM.androidLargeThreeModel.etFrameOneValue}"
                        tools:ignore="Autofill" />

                    <LinearLayout
                        android:id="@+id/linearButton"
                        style="@style/groupStylecornerRadius"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:orientation="vertical">

                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/txtMotdepasseou"
                    style="@style/txtBarlowbold10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:letterSpacing="0.05"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtMotdepasseou}"
                    android:textAllCaps="true"
                    tools:text="@string/msg_mot_de_passe_ou" />
            </GridLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLoginOne"
                style="@style/btnSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_56pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.11"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_23pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_23pxv"
                android:singleLine="true"
                android:text="@string/lbl_login2"
                android:textAllCaps="true"
                tools:text="@string/lbl_login2" />

            <TextView
                android:id="@+id/txtLanguage"
                style="@style/txtBarlowbold11"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="bottom|center_horizontal"
                android:letterSpacing="0.09"
                android:lineSpacingExtra="@dimen/_1pxh"
                android:singleLine="true"
                android:text="@{androidLargeThreeVM.androidLargeThreeModel.txtLanguage}"
                android:textAllCaps="true"
                tools:text="@string/msg_no_account_sig" />

            <LinearLayout
                android:id="@+id/linearButton1"
                style="@style/groupStylecornerRadius_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_128pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>
